# email-triage-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
data/: emails.json
env/: environment.py  grader.py  models.py  tasks.py
