[project]
name = "email-triage-env"
version = "0.1.0"
description = "Enterprise Email Triage OpenEnv environment"
authors = [
    {name = "Himanshu Negi"}
]
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"